platform/argocd/ingress-stage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: front-pepito
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: front-pepito
  name: front-pepito
  namespace: cora
spec:
  ingressClassName: nginx-internal
  rules:
  - host: pepito.stage.cora.team
    http:
      paths:
      - backend:
          service:
            name: front-pepito
            port:
              number: 4173
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pepito.stage.cora.team
    secretName: pepito-stage-cora-team
